tests-integration/tests/roundtrip/native-errors/semantic-errors/type-mismatch/type-mismatch.eprime
letting y be true 
find x: int (5..10)
such that 5 + y = 6